# mxp

./: README.md  flake.nix  requirements.txt  setup.cfg  setup.py
mxp/: __init__.py  tests.py
mxp/testfiles/: 3000 - Instrument Data - Text Format 1.txt  3000 - Text Report Data.txt  3000.mxp  3005 - Instrument Data - Text Format 1.txt  3005 - Text Report Data.txt  3005.mxp  HL60 SKI GFP 19.04.2018.mxp  U937 cells ski and vector 7.05.2018.mxp  set_number_test.mxp  set_number_test.should.json
