[metadata]
name = mxp
version = 0.1.3
author = Florian Finkernagel
author_email = finkernagel@imt.uni-marburg.de
description = qPCR fileformat reader
keywords = qPCR, MXP
url = http://www.imt.uni-marburg.de
long_description = Support code to read qPCR machine file formats,
    such as the .mxp file format created by MxPro.

    Currently reads files from 300 and 305er machines.

classifiers =
    Programming Language :: Python
	Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = mxp
install_requires = olefile; pandas
